--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
-node_modules
+# node_modules directory
+node_modules/
+
+# Dependency lock files
+package-lock.json
+yarn.lock
+
+# Environment files
+.env
+
+# Build output
+dist/
+build/
+
+# Logs and temporary files
+*.log
+.DS_Store
+
+# Personal editor/IDE configuration
+.vscode/
+.idea/
